fix: move scheduler to inline cron, minimal netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,8 @@
-# netlify.toml ← CLEAN 2025 SYNTAX, NO REDIRECTS NEEDED
+# netlify.toml — MINIMAL 2025, SCHEDULE MOVED TO FUNCTION CODE
 [build]
   publish = "."
   functions = "netlify/functions"
 
 [functions]
   node_bundler = "esbuild"
-  external_node_modules = ["jstat", "twitter-api-v2"]
-
-# Scheduled scraper every 12 hours
-[functions.schedules]
-  scheduler = "0 */12 * * *"
+  external_node_modules = ["jstat", "twitter-api-v2", "stripe", "jsonwebtoken"]
