--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "stripe": "^14.21.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "twitter-api-v2": "^1.16.3"
   }
 }
