--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "node-fetch": "^2.7.0",
-    "twitter-api-v2": "^1.16.3"
+    "twitter-api-v2": "^1.16.3",
+    "jstat": "^1.9.6"
   }
 }
